--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
     "@types/react-dom": "18.0.10",
     "@vercel/analytics": "^0.1.6",
     "@vercel/og": "^0.0.26",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "focus-trap-react": "^10.0.2",
     "framer-motion": "^8.4.2",
     "lucide-react": "0.105.0-alpha.4",
+    "moment-timezone": "^0.5.43",
     "ms": "^2.1.3",
     "next": "13.4.2",
     "next-auth": "4.22.1",
     "react": "18.2.0",
+    "react-clock": "^4.5.0",
     "react-dom": "18.2.0",
+    "react-live-clock": "^6.1.15",
     "react-markdown": "^8.0.4",
     "react-wrap-balancer": "^0.3.0",
     "typescript": "4.9.4",
