--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-dom": "18.2.0",
     "react-live-clock": "^6.1.15",
     "react-markdown": "^8.0.4",
+    "react-select": "^5.7.4",
+    "react-timezone-select": "^2.1.2",
     "react-wrap-balancer": "^0.3.0",
     "typescript": "4.9.4",
     "use-debounce": "^9.0.3"
