--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "13.4.2",
     "next-auth": "4.22.1",
     "react": "18.2.0",
+    "react-calendar": "^4.6.0",
     "react-clock": "^4.5.0",
     "react-dom": "18.2.0",
     "react-live-clock": "^6.1.15",
@@ -48,6 +49,7 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
     "@types/ms": "^0.7.31",
+    "@types/react-calendar": "^4.1.0",
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.6.0",
     "postcss": "^8.4.21",
