--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "prisma generate && next dev",
-    "build": "prisma generate && prisma db push && next build",
+    "build": "next build",
     "format:write": "prettier --write \"**/*.{css,js,json,jsx,ts,tsx}\"",
     "format": "prettier \"**/*.{css,js,json,jsx,ts,tsx}\"",
     "start": "next start",
@@ -29,7 +29,7 @@
     "lucide-react": "0.105.0-alpha.4",
     "moment-timezone": "^0.5.43",
     "ms": "^2.1.3",
-    "next": "13.4.2",
+    "next": "^13.4.19",
     "next-auth": "4.22.1",
     "react": "18.2.0",
     "react-clock": "^4.5.0",
