--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@vercel/og": "^0.0.26",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "focus-trap-react": "^10.0.2",
     "framer-motion": "^8.4.2",
     "lucide-react": "0.105.0-alpha.4",
+    "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "ms": "^2.1.3",
     "next": "^13.4.19",
