--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.8.1",
     "@radix-ui/react-popover": "^1.0.2",
@@ -29,6 +30,7 @@
     "framer-motion": "^8.4.2",
     "lucide-react": "0.105.0-alpha.4",
     "moment": "^2.29.4",
+    "moment-jalaali": "^0.10.0",
     "moment-timezone": "^0.5.43",
     "ms": "^2.1.3",
     "next": "^13.4.19",
@@ -51,6 +53,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/moment-jalaali": "^0.7.7",
     "@types/ms": "^0.7.31",
     "@types/react-calendar": "^4.1.0",
     "autoprefixer": "^10.4.13",
