--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "framer-motion": "^8.4.2",
     "lucide-react": "0.105.0-alpha.4",
     "moment": "^2.29.4",
+    "moment-hijri": "^2.1.2",
     "moment-jalaali": "^0.10.0",
     "moment-timezone": "^0.5.43",
     "ms": "^2.1.3",
@@ -53,6 +54,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/moment-hijri": "^2.1.1",
     "@types/moment-jalaali": "^0.7.7",
     "@types/ms": "^0.7.31",
     "@types/react-calendar": "^4.1.0",
