add sitemap for all pages

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "format:write": "prettier --write \"**/*.{css,js,json,jsx,ts,tsx}\"",
     "format": "prettier \"**/*.{css,js,json,jsx,ts,tsx}\"",
     "start": "next start",
@@ -36,6 +37,7 @@
     "ms": "^2.1.3",
     "next": "^13.4.19",
     "next-auth": "4.22.1",
+    "next-sitemap": "^4.2.3",
     "ol": "^8.1.0",
     "react": "18.2.0",
     "react-calendar": "^4.6.0",
