--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.8.1",
@@ -22,6 +23,7 @@
     "@types/react-dom": "18.0.10",
     "@vercel/analytics": "^0.1.6",
     "@vercel/og": "^0.0.26",
+    "accept-language": "^3.0.18",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
@@ -29,6 +31,8 @@
     "eslint-config-next": "13.1.1",
     "focus-trap-react": "^10.0.2",
     "framer-motion": "^8.4.2",
+    "i18next": "^23.10.0",
+    "i18next-resources-to-backend": "^1.2.0",
     "lucide-react": "0.105.0-alpha.4",
     "moment": "^2.29.4",
     "moment-hijri": "^2.1.2",
@@ -37,12 +41,14 @@
     "ms": "^2.1.3",
     "next": "^13.4.19",
     "next-auth": "4.22.1",
+    "next-i18next": "^15.2.0",
     "next-sitemap": "^4.2.3",
     "ol": "^8.1.0",
     "react": "18.2.0",
     "react-calendar": "^4.6.0",
     "react-clock": "^4.5.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^14.0.5",
     "react-live-clock": "^6.1.15",
     "react-markdown": "^8.0.4",
     "react-modern-calendar-datepicker": "^3.1.6",
