--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-select": "^5.7.4",
     "react-timezone-select": "^2.1.2",
     "react-wrap-balancer": "^0.3.0",
+    "sharp": "^0.33.2",
     "typescript": "4.9.4",
     "use-debounce": "^9.0.3"
   },
