--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/third-parties": "^14.2.3",
     "@prisma/client": "^4.8.1",
     "@radix-ui/react-popover": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.2",
@@ -34,7 +35,7 @@
     "moment-jalaali": "^0.10.0",
     "moment-timezone": "^0.5.43",
     "ms": "^2.1.3",
-    "next": "^13.4.19",
+    "next": "^14.2.3",
     "next-intl": "^3.9.4",
     "next-sitemap": "^4.2.3",
     "ol": "^8.1.0",
