--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1",
+    "eslint-config-next": "^14.2.3",
     "focus-trap-react": "^10.0.2",
     "framer-motion": "^8.4.2",
     "lucide-react": "0.105.0-alpha.4",
@@ -39,9 +39,9 @@
     "next-intl": "^3.9.4",
     "next-sitemap": "^4.2.3",
     "ol": "^8.1.0",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-clock": "^4.5.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-live-clock": "^6.1.15",
     "react-markdown": "^8.0.4",
     "react-modern-calendar-datepicker": "^3.1.6",
