--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslint-config-next": "^14.2.3",
     "focus-trap-react": "^10.0.2",
     "framer-motion": "^8.4.2",
+    "loadash": "^1.0.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "0.105.0-alpha.4",
     "moment": "^2.29.4",
     "moment-hijri": "^2.1.2",
@@ -55,6 +57,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/moment-hijri": "^2.1.1",
     "@types/moment-jalaali": "^0.7.7",
     "@types/ms": "^0.7.31",
