--- a/package.json
+++ b/package.json
@@ -13,61 +13,62 @@
   },
   "dependencies": {
     "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
-    "@next-auth/prisma-adapter": "^1.0.5",
-    "@next/third-parties": "^14.2.3",
-    "@prisma/client": "^4.8.1",
-    "@radix-ui/react-popover": "^1.0.2",
-    "@radix-ui/react-tooltip": "^1.0.2",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "@vercel/analytics": "^0.1.6",
-    "@vercel/og": "^0.0.26",
-    "axios": "^1.4.0",
-    "classnames": "^2.3.2",
-    "eslint": "8.31.0",
-    "eslint-config-next": "^14.2.3",
-    "focus-trap-react": "^10.0.2",
-    "framer-motion": "^8.4.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@next/third-parties": "^14.2.5",
+    "@prisma/client": "^5.17.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@types/node": "22.0.0",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/og": "^0.6.2",
+    "axios": "^1.7.2",
+    "classnames": "^2.5.1",
+    "eslint": "9.8.0",
+    "eslint-config-next": "^14.2.5",
+    "focus-trap-react": "^10.2.3",
+    "framer-motion": "^11.3.19",
     "loadash": "^1.0.0",
     "lodash.debounce": "^4.0.8",
-    "lucide-react": "0.105.0-alpha.4",
-    "moment": "^2.29.4",
-    "moment-hijri": "^2.1.2",
-    "moment-jalaali": "^0.10.0",
-    "moment-timezone": "^0.5.43",
+    "lucide-react": "0.417.0",
+    "moment": "^2.30.1",
+    "moment-hijri": "^2.30.0",
+    "moment-jalaali": "^0.10.1",
+    "moment-timezone": "^0.5.45",
     "ms": "^2.1.3",
-    "next": "^14.2.3",
-    "next-intl": "^3.9.4",
+    "next": "^14.2.5",
+    "next-intl": "^3.17.2",
     "next-sitemap": "^4.2.3",
-    "ol": "^8.1.0",
+    "ol": "^10.0.0",
     "react": "^18.3.1",
-    "react-clock": "^4.5.0",
+    "react-clock": "^5.0.0",
     "react-dom": "^18.3.1",
-    "react-live-clock": "^6.1.15",
-    "react-markdown": "^8.0.4",
+    "react-live-clock": "^6.1.22",
+    "react-markdown": "^9.0.1",
     "react-modern-calendar-datepicker": "^3.1.6",
-    "react-responsive": "^9.0.2",
-    "react-select": "^5.7.4",
-    "react-timezone-select": "^2.1.2",
-    "react-wrap-balancer": "^0.3.0",
-    "typescript": "4.9.4"
+    "react-moment": "^1.1.3",
+    "react-responsive": "^10.0.0",
+    "react-select": "^5.8.0",
+    "react-timezone-select": "^3.2.7",
+    "react-wrap-balancer": "^1.1.1",
+    "typescript": "5.5.4"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.9",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/moment-hijri": "^2.1.1",
-    "@types/moment-jalaali": "^0.7.7",
-    "@types/ms": "^0.7.31",
+    "@types/moment-hijri": "^2.1.4",
+    "@types/moment-jalaali": "^0.7.9",
+    "@types/ms": "^0.7.34",
     "@types/react-calendar": "^4.1.0",
-    "autoprefixer": "^10.4.13",
-    "concurrently": "^7.6.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.2",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "prisma": "^4.13.0",
-    "tailwindcss": "^3.2.4"
+    "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
+    "postcss": "^8.4.40",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prisma": "^5.17.0",
+    "tailwindcss": "^3.4.7"
   }
 }
